[package]
name = "tiled-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[build-dependencies]
glob = "0.3.1"

[dependencies.tiled]
path = ".."

[[bin]]
name = "tiled"
path = "fuzz_targets/tiled.rs"
test = false
doc = false
bench = false
